[package]
name = "binance"
version = "0.1.0"
edition = "2021"

[lib]
name = "binance"
path = "src/lib.rs"

[[bin]]
name = "binance"
path = "src/bin/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.22"
tokio = "1.34.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.12"
serde_repr = "0.1.12"
chrono = "0.4.31"
