[package]
name = "exchange_async"
version = "0.1.0"
edition = "2021"

[lib]
name = "exchange_async"
path = "src/lib.rs"

[[bin]]
name = "exchange_async"
path = "src/bin/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.22"
tokio = { version = "1.34.0", features = ["full"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.12"
serde_repr = "0.1.12"
chrono = "0.4.31"
tokio-tungstenite = "0.20.1"
url = "2.5.0"
futures = "0.3.29"
thiserror = "1.0.50"
